--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,15 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div id="content" class="container">
+        <header id="content-header">
+            <div id="price-container">
+              <span class="glyphicon glyphicon-tag"></span><span class="price">$9.99</span>
+            </div>
+    <!--        <img id="content-header-img" src="img/header-image.jpg" alt="Learn Growth Hacking"> -->
+            <%= image_tag('header-image.jpg', id:"content-head-img", alt:"Learn Rails!") %>
+        </header>
+        <%= yield %>
+    </div>
   </body>
 </html>
